--- a/sugar/public/index.html
+++ b/sugar/public/index.html
@@ -26,6 +26,9 @@
     -->
     <title>React App</title>
     <script src="https://kit.fontawesome.com/6ee714d796.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
